--- a/mvc/CI-Platform/CI-Platform-web/Views/Admin/MissionApplication.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Admin/MissionApplication.cshtml
@@ -42,12 +42,12 @@
                         <td>@mal.AppliedAt</td>
                        
                         <td>
-                            <button class="p-0 btn ApproveOrDeclineApplication"  id="ApprovalBtn" data-bs-toggle="modal" data-bs-target="#ApproveOrDeclineModal" data-application-id="@mal.MissionApplicationId" data-status="1">
-                                <i class="fa-regular fa-circle-check" style="color: #00ff00;"></i>
+                            <button class="p-0 btn ApproveOrDeclineApplication @(mal.ApprovalStatus == "APPROVE" ? "border-0 disabled" : "")" id="ApprovalBtn" data-bs-toggle="modal" data-bs-target="#ApproveOrDeclineModal" data-application-id="@mal.MissionApplicationId" data-status="1">
+                                <i class="fa-circle-check @(mal.ApprovalStatus == "APPROVE" ? "fa-solid" : "fa-regular")" style="color: #00ff00;"></i>
                             </button>
 
-                            <button class="btn p-0 ApproveOrDeclineApplication" id="DeclineBtn" data-bs-target="#ApproveOrDeclineModal" data-bs-toggle="modal" data-application-id="@mal.MissionApplicationId" data-status="0">
-                                <i class="fa-regular fa-circle-xmark" style="color: #ff0000;"></i>
+                            <button class="btn p-0 ApproveOrDeclineApplication @(mal.ApprovalStatus == "DECLINE" ? "border-0 disabled" : "")" id="DeclineBtn" data-bs-target="#ApproveOrDeclineModal" data-bs-toggle="modal" data-application-id="@mal.MissionApplicationId" data-status="0">
+                                <i class="fa-circle-xmark @(mal.ApprovalStatus == "DECLINE" ? "fa-solid" : "fa-regular")" style="color: #ff0000;"></i>
                             </button>
                         </td>
                     </tr>
