--- a/mvc/CI-Platform/CI-Platform-web/Views/Admin/Story.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Admin/Story.cshtml
@@ -5,7 +5,7 @@
 @model CI_Platform.Entities.ViewModels.AdminApprovalViewModel
 <div class="container-fluid my-5 mx-2">
     <h3 class="pb-1 border-bottom"><span class="heading-underline pb-1"> Story </span></h3>
-
+    <div id="StoryDetailsAdmin"></div>
     @*    add button partial view call*@
 
     <div class="table-responsive m-3">
@@ -38,15 +38,15 @@
                         <td>@story.Mission.Title</td>
 
                         <td>
-                            <button class="btn formBtn" id="ViewStoryBtn" data-user-id="@story.User.UserId" data-mission-id="@story.Mission.MissionId">
+                            <button class="btn formBtn" id="ViewStoryBtn" data-mission-id="@story.Mission.MissionId">
                                 View
                             </button>&nbsp;
-                            <button class="p-0 btn GetStoryIdBtn" id="StoryApprovalBtn" data-bs-toggle="modal" data-bs-target="#StoryModal" data-story-id="@story.StoryId" data-status="1">
-                                <i class="fa-regular fa-circle-check" style="color: #00ff00;"></i>
+                            <button class="p-0 btn GetStoryIdBtn @(story.Status == "PUBLISHED" ? "disabled border-0" : "")" id="StoryApprovalBtn" data-bs-toggle="modal" data-bs-target="#StoryModal" data-story-id="@story.StoryId" data-status="1">
+                                <i class="fa-circle-check @(story.Status == "PUBLISHED" ? "fa-solid" : "fa-regular")" style="color: #00ff00;"></i>
                             </button>
                             &nbsp;
-                            <button class="btn p-0 GetStoryIdBtn" id="StoryDeclineBtn" data-bs-target="#StoryModal" data-bs-toggle="modal" data-story-id="@story.StoryId" data-status="0">
-                                <i class="fa-regular fa-circle-xmark" style="color: #ff0000;"></i>
+                            <button class="btn p-0 GetStoryIdBtn @(story.Status == "DECLINED" ? "disabled border-0" : "")" id="StoryDeclineBtn" data-bs-target="#StoryModal" data-bs-toggle="modal" data-story-id="@story.StoryId" data-status="0">
+                                <i class="fa-circle-xmark @(story.Status == "DECLINED" ? "fa-solid" : "fa-regular")" style="color: #ff0000;"></i>
                             </button>
                             &nbsp;
                             <button class="p-0 btn GetStoryIdBtn" data-bs-toggle="modal" data-bs-target="#StoryDeleteModal" data-story-id="@story.StoryId">
