--- a/mvc/CI-Platform/CI-Platform-web/Views/Admin/_AddOrUpdateMission.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Admin/_AddOrUpdateMission.cshtml
@@ -156,6 +156,7 @@
                 <div class="col-md-6">
                     <label asp-for="Avaliablity" class="form-label ms-1">Avaliability</label>
                     <select asp-for="Avaliablity" class="form-select" id="AvaliabilitySelect" name="Avaliablity" aria-label="Select your Avaliability">
+                        <option value="" selected disabled hidden">Select Avaliability</option>
                         <option value="daily">daily</option>
                         <option value="weekly">weekly</option>
                         <option value="week-end">week-end</option>
