--- a/mvc/CI-Platform/CI-Platform-web/Views/Auth/ForgetPass.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Auth/ForgetPass.cshtml
@@ -23,7 +23,7 @@
                     <a asp-controller="Auth" asp-action="Index" class="login">Login</a>
                 </div>
 
-                <a href="#" class=" d-flex sticky-xxl-bottom p-5 mt-5  justify-content-center privacy">Privacy Policy</a>
+             @*   <a href="#" class=" d-flex sticky-xxl-bottom p-5 mt-5  justify-content-center privacy">Privacy Policy</a>*@
 
             </form>
         </div>
