--- a/mvc/CI-Platform/CI-Platform-web/Views/Auth/Register.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Auth/Register.cshtml
@@ -57,7 +57,7 @@
                 <div class="d-flex justify-content-center">
                     <span class="password"> Already Registered? <a asp-controller="Auth" asp-action="Index">Login Now</a></span>
                 </div>
-                <a href="#" class=" d-flex mt-xl-3  p-4 justify-content-center privacy">Privacy Policy</a>
+             @*   <a href="#" class=" d-flex mt-xl-3  p-4 justify-content-center privacy">Privacy Policy</a>*@
 
             </form>
 
