--- a/mvc/CI-Platform/CI-Platform-web/Views/Auth/ResetPass.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Auth/ResetPass.cshtml
@@ -33,7 +33,7 @@
                 <div class="d-flex mb-5 p-4 justify-content-center">
                     <a asp-controller="Auth" asp-action="Index" class="login">Login</a>
                 </div>
-                <a href="#" class=" d-flex p-5 mt-5 justify-content-center privacy">Privacy Policy</a>
+               @* <a href="#" class=" d-flex p-5 mt-5 justify-content-center privacy">Privacy Policy</a>*@
             </form>
         </div>
     </div>
